After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678543 - asfdemux: Ignore parsing errors from broken packets
asfdemux: Ignore parsing errors from broken packets
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
unspecified
Other All
: Normal normal
: 0.10.20
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-21 14:15 UTC by Bastien Nocera
Modified: 2012-06-27 08:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
asfdemux: Ignore parsing errors from broken packets (10.11 KB, patch)
2012-06-21 14:15 UTC, Bastien Nocera
none Details | Review

Description Bastien Nocera 2012-06-21 14:15:25 UTC
.
Comment 1 Bastien Nocera 2012-06-21 14:15:27 UTC
Created attachment 216923 [details] [review]
asfdemux: Ignore parsing errors from broken packets

We should instead be counting the number of errors and exiting if
they're too numerous. This makes a number of broken ASF files playable.
Comment 2 Wim Taymans 2012-06-27 08:15:27 UTC
commit d349ba1db06d84ee1e3838dff1a7c09452f4b05f
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu Jun 21 15:13:57 2012 +0100

    asfdemux: Ignore parsing errors from broken packets
    
    We should instead be counting the number of errors and exiting if
    they're too numerous. This makes a number of broken ASF files playable.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=678543